more css alts to lists to fix invisible text on smartphones li

--- a/src/Components/Dashboard/List.css
+++ b/src/Components/Dashboard/List.css
@@ -151,6 +151,13 @@
 
   .list-group-item .fw-bold {
     font-size: 1rem;
+    color: var(--light-teal);
+  }
+
+  .list-group-item .fw-bold::before {
+    content: " ";
+    margin-right: 8px;
+    color: var(--light-teal);
   }
 
   .list-group-item small {
